Change Boolean constructor usage flagged by Findbugs