@@ -1,4 +1,4 @@
-// $Id: ActionVisibilityPrivate.java,v 1.4 2006/04/01 11:45:08 linus Exp $
+// $Id: ActionVisibilityPrivate.java,v 1.5 2006/04/19 05:28:58 tfmorris Exp $
 // Copyright (c) 2005-2006 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
@@ -28,13 +28,18 @@ import org.argouml.model.Model;
 
 class ActionVisibilityPrivate extends AbstractActionRadioMenuItem {
     /**
+     * Serial version generated for rev 1.5
+     */
+    private static final long serialVersionUID = -1342216726253371114L;
+
+    /**
      * The constructor.
      *
      * @param o the target
      */
     public ActionVisibilityPrivate(Object o) {
         super("checkbox.visibility.private-uc", NO_ICON);
-        putValue("SELECTED", new Boolean(
+        putValue("SELECTED", Boolean.valueOf(
             Model.getVisibilityKind().getPrivate()
                 .equals(valueOfTarget(o))));
     }
