@@ -1,4 +1,4 @@
-// $Id: ActionVisibilityProtected.java,v 1.4 2006/04/01 11:45:08 linus Exp $
+// $Id: ActionVisibilityProtected.java,v 1.5 2006/04/19 05:28:58 tfmorris Exp $
 // Copyright (c) 2005-2006 The Regents of the University of California. All
 // Rights Reserved. Permission to use, copy, modify, and distribute this
 // software and its documentation without fee, and without a written
@@ -28,13 +28,18 @@ import org.argouml.model.Model;
 
 class ActionVisibilityProtected extends AbstractActionRadioMenuItem {
     /**
+     * Serial version generated for rev 1.5
+     */
+    private static final long serialVersionUID = -8808296945094744255L;
+
+    /**
      * The constructor.
      *
      * @param o the target
      */
     public ActionVisibilityProtected(Object o) {
         super("checkbox.visibility.protected-uc", NO_ICON);
-        putValue("SELECTED", new Boolean(
+        putValue("SELECTED", Boolean.valueOf(
             Model.getVisibilityKind().getProtected()
                 .equals(valueOfTarget(o))));
     }
